test/error/iocheck/err3.rzy
// Error: response is not allowed to write state

Err3 = Component
  what : response():R{0,100};
  event : signal();
  
hfsm(A)
  A : state
    what : response():R{0,100}
      event();
      return 0;
    end
  end
end

